syntax = "proto3";

package temporal.record;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "temporal/record/params.proto";
import "temporal/record/delegation_history.proto";
import "temporal/record/delegation_timestamp.proto";
import "temporal/record/user_instructions.proto";

option go_package = "github.com/temporal-zone/temporal/x/record/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/temporal/record/params";
  
  }
  
  // Queries a list of DelegationHistory items.
  rpc DelegationHistory    (QueryGetDelegationHistoryRequest) returns (QueryGetDelegationHistoryResponse) {
    option (google.api.http).get = "/temporal/record/delegation_history/{address}";
  
  }
  rpc DelegationHistoryAll (QueryAllDelegationHistoryRequest) returns (QueryAllDelegationHistoryResponse) {
    option (google.api.http).get = "/temporal/record/delegation_history";
  
  }
  
  // Queries a list of UserInstructions items.
  rpc UserInstructions    (QueryGetUserInstructionsRequest) returns (QueryGetUserInstructionsResponse) {
    option (google.api.http).get = "/temporal-zone/temporal/record/user_instructions/{address}";
  
  }
  rpc UserInstructionsAll (QueryAllUserInstructionsRequest) returns (QueryAllUserInstructionsResponse) {
    option (google.api.http).get = "/temporal-zone/temporal/record/user_instructions";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetDelegationHistoryRequest {
  string address = 1;
}

message QueryGetDelegationHistoryResponse {
  DelegationHistory delegationHistory = 1 [(gogoproto.nullable) = false];
}

message QueryAllDelegationHistoryRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDelegationHistoryResponse {
  repeated DelegationHistory                      delegationHistory = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination        = 2;
}

message QueryGetUserInstructionsRequest {
  string address = 1;
}

message QueryGetUserInstructionsResponse {
  UserInstructions userInstructions = 1 [(gogoproto.nullable) = false];
}

message QueryAllUserInstructionsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllUserInstructionsResponse {
  repeated UserInstructions                       userInstructions = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination       = 2;
}

